lager-lang/examples/good/arg_ref.lg
void f(int &x) {
    x = x * 2;
}

int main() {
    int x = 5;
    f(x);
    print(x); // 10
    
    return 0;
}
