lager-lang/examples/bad/void_arg.lg
int f(void x) { // compile error
    return 0;
}

int main() {
    return 0;
}